js bug + fluid bootstrap

--- a/app/assets/stylesheets/launchpad/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/launchpad/bootstrap_and_overrides.css.less
@@ -47,7 +47,7 @@ li.active{a{color: black; font-weight: bold; border:none; background-color: tran
 .simple_form_search_bar{background-color: white; border: 1px lightgray solid;}
 .table-borderless td,
 .table-borderless th{ border: 0 !important }
-.navbar .navbar-top .navbar-inner .container .nav-collapse ul.nav{margin-bottom: 0px; border: none;}
+.navbar .navbar-top .navbar-inner .container-fluid .nav-collapse ul.nav{margin-bottom: 0px; border: none;}
 
 ul.nav.nav-pills{
 li.active{a{background-color: #D80000; color: white; font-weight: bold; }}
