--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -11,8 +11,8 @@
     %meta{name: "description", content: "pykih reader is an open source feed reader aimed at being a community owned and community developed feed reading & sharing platform."}
   %body.all
     %div{class: "mainHeader"}
-      .container
-        .row
+      .container-fluid
+        .row-fluid
           .span3
             %div{style: "padding-top: 10px;"}= link_to image_tag("logo.png"), root_url
           .span4
@@ -28,11 +28,11 @@
               %ul.nav.nav-pills
                 %li{class: (action_name == "developer") ? "active" : nil}= link_to "Developer", developer_path, style: "text-decoration: none;"
                 %li{class: (action_name == "about") ? "active" : nil}= link_to "About", about_path, style: "text-decoration: none;"
-    .container
-      .row
+    .container-fluid
+      .row-fluid
         .span12= render partial: "layouts/shared/messages"
       = yield
-      .row
+      .row-fluid
         .span12
           .right.f11{style: "color: gray;"} Built and managed by #{link_to "Pykih Software LLP", "http://www.pykih.com", style: "color: gray;", target: "_blank"}
           %br
