eliminating google reader fetch on sign up

--- a/app/views/static_pages/index.html.haml
+++ b/app/views/static_pages/index.html.haml
@@ -20,7 +20,7 @@
     %h3.red
       = number_to_human(Ref::Entry.count)
       = "articles delivered since launch (#{(Time.now.to_date - Date.new(2013, 6, 3)).to_i.to_s} days ago)"
-    = image_tag "home.png"
+    = image_tag "reader.png"
 .row-fluid
   .span4
     .well
