--- a/app/views/static_pages/faqs.html.haml
+++ b/app/views/static_pages/faqs.html.haml
@@ -7,10 +7,10 @@
     %br
     %div
     %h3.thin
-      = link_to "Why is the login asking to create a GPlus account i.e. enter name, gender, age, etc?", "#mandatory_gplus", class: "red"
+      = link_to "Why is the login asking to create a Google Plus account i.e. enter name, gender, age, etc?", "#mandatory_gplus", class: "red"
       %br
       %br
     %h3 Answers
     %br
-    %h4{id: "mandatory_gplus"} Why is the login asking to create a GPlus account i.e. enter name, gender, age, etc?
-    %h4.thin Google mandatorily asks to create GPlus account if external developers like us use Google Login. So that is not us. :-) To mitigate this, we are adding Facebook login soon.
+    %h4{id: "mandatory_gplus"} Why is the login asking to create a Google Plus account i.e. enter name, gender, age, etc?
+    %h4.thin Google mandatorily asks to create Google Plus account if external developers like us use Google Login. So that is not us. :-) To mitigate this, we are adding Facebook login soon.
