--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -26,8 +26,8 @@
                 %li= link_to "Sign Out".html_safe, sign_out_path
             - else
               %ul.nav.nav-pills
-                %li{class: (action_name.eql? "developer") ? "active" : nil}= link_to "Developer", developer_path, style: "text-decoration: none;"
-                %li{class: (action_name.eql? "about") ? "active" : nil}= link_to "About", about_path, style: "text-decoration: none;"
+                %li{class: (action_name.eql?("developer")) ? "active" : nil}= link_to "Developer", developer_path, style: "text-decoration: none;"
+                %li{class: (action_name.eql?("about")) ? "active" : nil}= link_to "About", about_path, style: "text-decoration: none;"
     .container-fluid
       .row-fluid
         .span12= render partial: "layouts/shared/messages"
