--- a/app/views/users/_feed_details.html.haml
+++ b/app/views/users/_feed_details.html.haml
@@ -1,7 +1,7 @@
 - if !(@feed_article.blank? or (f.id != @feed_article.id and @feed_article.present?))
   - if f.name.present?
     %h3= link_to f.name, user_my_entry_path(current_user, f), target: "_blank", class: "red"
-  - if f.id.eql? @feed_article.id
+  - if f.id.eql?(@feed_article.id)
     - if @feed_article.content.present?
       %br
       = @feed_article.content.to_s.html_safe
