--- a/app/views/users/_sidebar.html.haml
+++ b/app/views/users/_sidebar.html.haml
@@ -1,2 +1,2 @@
 %ul.nav.nav-tabs.nav-stacked
-  %li{class: (controller_name.eql? 'users' and action_name.eql? 'edit') ? "active" : nil}= link_to "Edit Account", edit_user_path(current_user)
+  %li{class: (controller_name.eql?('users') and action_name.eql?('edit')) ? "active" : nil}= link_to "Edit Account", edit_user_path(current_user)
